@@ -184,8 +184,6 @@
               targetEvent: $event,
               clickOutsideToClose: false,
               escapeToClose: false,
-              scope: $scope,
-              preserveScope: true,
               templateUrl: 'UIxMailEditor',
               controller: 'MessageEditorController',
               controllerAs: 'editor',
@@ -193,6 +191,7 @@
                 return onCompleteDeferred.resolve(element);
               },
               locals: {
+                stateParent: $scope,
                 stateAccount: vm.account,
                 stateMessage: message,
                 onCompletePromise: function () {
