@@ -246,8 +246,6 @@
         disableParentScroll: false,
         clickOutsideToClose: false,
         escapeToClose: false,
-        scope: $scope,
-        preserveScope: true,
         templateUrl: 'UIxMailEditor',
         controller: 'MessageEditorController',
         controllerAs: 'editor',
@@ -255,6 +253,7 @@
           return onCompleteDeferred.resolve(element);
         },
         locals: {
+          stateParent: $scope,
           stateAccount: stateAccount,
           stateMessage: stateMessage,
           onCompletePromise: function () {
