@@ -14,6 +14,7 @@ Bug fixes
  - [web] fixed display of notification email in calendar properties
  - [web] fixed display of multi-days events when some weekdays are disabled
  - [web] fixed synchronisation of calendar categories
+ - [web] fixed popup window detection in message viewer (#4518)
 
 4.0.2 (2018-08-24)
 ------------------
